<resources>
        <string name="about_app">"MyWorld App is an exclusive and convenient app with different facets developed to be of use for academic and constructive purposes.
It is a conglomeration of our individual resources harnessed to serve you better and effectively.
Feel free to get other apps from us and stay tuned to our updates and novel releases."</string>
        <string name="about_contact_us">Contact us</string>
        <string name="about_facebook">Like us on Facebook</string>
        <string name="about_github">Fork us on GitHub</string>
        <string name="about_instagram">Follow us on Instagram</string>
        <string name="about_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vehicula ligula tortor, in pellentesque dui congue ac. Vestibulum lacinia urna magna, quis cursus ante iaculis nec. Nunc ut ligula sit amet odio ultrices euismod vel vel purus. Sed lacus mauris, aliquam et placerat id</string>
        <string name="about_play_store">Rate us on the Play Store</string>
        <string name="about_twitter">Follow us on Twitter</string>
        <string name="about_website">Visit our website</string>
        <string name="about_youtube">Watch us on Youtube</string>
        <string name="accept">Accept</string>
        <string name="action_about">About</string>
        <string name="action_account">Account</string>
        <string name="action_clear">Clear</string>
        <string name="action_delete">Delete Note</string>
        <string name="action_details">Note Details</string>
        <string name="action_digest">Reformers Digest</string>
        <string name="action_edit">Edit Note</string>
        <string name="action_help">Help</string>
        <string name="action_info">Info</string>
        <string name="action_logoff">Logoff</string>
        <string name="action_paint">FingerPaint</string>
        <string name="action_print">Print</string>
        <string name="action_profile_edit">Edit Profile</string>
        <string name="action_profile_info">Profile Info</string>
        <string name="action_search">Search</string>
        <string name="action_settings">Settings</string>
        <string name="action_share">Share App</string>
        <string name="action_share_note">Share Note</string>
        <string name="action_signout">Sign out</string>
        <string name="action_view">View Note</string>
        <string name="add_image">Add Image</string>
        <string name="add_text_image">Add Text</string>
        <string name="address">Address</string>
        <string name="already_a_member_login">Already a member? Login</string>
        <string name="app_description">Learning Together Easily</string>
        <string name="app_name">E-NoteBook</string>
        <string name="app_owner">© Kixfobby™ Inc.</string>
        <string name="app_search">App Search</string>
        <string name="app_version">3.5</string>
        <string name="backward">Backward</string>
        <string name="banner_ad_loading">Loading…</string>
        <string name="banner_ad_unit_id">ca-app-pub-2571017324761827/3838589652</string>
        <string name="btnNext">Next</string>
        <string name="btnSkip">Skip</string>
        <string name="calculate">Calculate</string>
        <string name="convert">C⚛O⚛N⚛V⚛E⚛R⚛T</string>
        <string name="copy_right">Copyrights © %1$d</string>
        <string name="course_10_credit">Course 10 Credit</string>
        <string name="course_10_grade">Course 10 Grade</string>
        <string name="course_11_credit">Course 11 Credit</string>
        <string name="course_11_grade">Course 11 Grade</string>
        <string name="course_12_credit">Course 12 Credit</string>
        <string name="course_12_grade">Course 12 Grade</string>
        <string name="course_1_credit">Course 1 Credit</string>
        <string name="course_1_grade">Course 1 Grade</string>
        <string name="course_2_credit">Course 2 Credit</string>
        <string name="course_2_grade">Course 2 Grade</string>
        <string name="course_3_credit">Course 3 Credit</string>
        <string name="course_3_grade">Course 3 Grade</string>
        <string name="course_4_credit">Course 4 Credit</string>
        <string name="course_4_grade">Course 4 Grade</string>
        <string name="course_5_credit">Course 5 Credit</string>
        <string name="course_5_grade">Course 5 Grade</string>
        <string name="course_6_credit">Course 6 Credit</string>
        <string name="course_6_grade">Course 6 Grade</string>
        <string name="course_7_credit">Course 7 Credit</string>
        <string name="course_7_grade">Course 7 Grade</string>
        <string name="course_8_credit">Course 8 Credit</string>
        <string name="course_8_grade">Course 8 Grade</string>
        <string name="course_9_credit">Course 9 Credit</string>
        <string name="course_9_grade">Course 9 Grade</string>
        <string name="create">Create</string>
        <string name="create_account">Create Account</string>
        <string name="create_new_note">Create New Note</string>
        <string name="create_pdf">Create Pdf</string>
        <string name="creating_pdf">Creating PDF</string>
        <string name="cropImage_activityTitle">Crop image No.</string>
        <string name="crop_image">Crop Image</string>
        <string name="default_directory">Pictures</string>
        <string name="delete">Delete</string>
        <string name="descFirst">"Hi,
So you wanted to learn how to build an android app with no prior coding experience ?
Don't worry, this app might be the perfect start for you in 2018."</string>
        <string name="descLast">"Can you believe the application you are viewing, it's source can be freely downloaded from GitHub?
Navigate to the Source Code section for more."</string>
        <string name="descSecond">"Learn from variety of sources.
I'm sure this will help the beginners to get started."</string>
        <string name="descThird">"Have patience and faith.
It takes time but i promise it worth's."</string>
        <string name="description_fingerprint_icon">Fingerprint icon</string>
        <string name="done">done</string>
        <string name="e_calculator">E-CALCULATOR</string>
        <string name="e_notes">E-NOTES</string>
        <string name="e_reader">E-READER</string>
        <string name="edit">Edit</string>
        <string name="edit_text">Edit Text</string>
        <string name="email">Email</string>
        <string name="enter_file_name">Enter File Name</string>
        <string name="example">Example : myfile</string>
        <string name="file_name">File Name</string>
        <string name="fingerprint_description">Confirm fingerprint to continue</string>
        <string name="fingerprint_hint">Touch sensor</string>
        <string name="fingerprint_login">Fingerprint Login</string>
        <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
        <string name="fingerprint_success">Fingerprint recognized</string>
        <string name="forgot_password">Forgot Password</string>
        <string name="forward">Forward</string>
        <string name="got_it">Got it</string>
        <string name="gp_calculator">GP CALCULATOR</string>
        <string name="help">Help</string>
        <string name="input_value">íυȶρυȶ ναℓυɛ</string>
        <string name="introFirst">Learn Android Development</string>
        <string name="introLast">Open-Sourced</string>
        <string name="introSecond">From the Scratch</string>
        <string name="introThird">Believe in yourself</string>
        <string name="invoice_address">"Terry M Smith
(904) 246-1297
207 Cherry St, Neptune Beach, FL, 32266"</string>
        <string name="key_send_feedback">key_send_feedback</string>
        <string name="loading_complete">Files Loading Complete!</string>
        <string name="loading_files">Loading Files… This Might Take Some Minutes to Complete!</string>
        <string name="login">Login</string>
        <string name="main_screen">main_screen</string>
        <string name="marque_text">You Can Contact Us With Your Suggestions. You Can Send Your Mails To Us Anytime. Developed By Kixfobby™ Inc.</string>
        <string name="max_count_msg">%1$d images selected already</string>
        <string name="min_count_msg">you have to select at least 1 image</string>
        <string name="mobile_number">Mobile Number</string>
        <string name="name">Name</string>
        <string name="nav_app_bar_navigate_up_description">Navigate up</string>
        <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="nav_header_subtitle">Create Pdf</string>
        <string name="nav_header_title">My World App</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="new_note">New Note</string>
        <string name="next">Next</string>
        <string name="no_account_yet_create_one">No account yet? Create one</string>
        <string name="no_image">No Image</string>
        <string name="open_file">Open File</string>
        <string name="open_last_note">Open Last Note</string>
        <string name="output_value">συȶρυȶ ναℓυɛ</string>
        <string name="password">Password</string>
        <string name="pdf_creator">PDF CREATOR</string>
        <string name="pdf_dir">/Kixfobby/MyWorld/Document/Created-Pdf/</string>
        <string name="pdf_ext">.pdf</string>
        <string name="pdf_type">application/pdf</string>
        <string name="pick_image_intent_chooser_title">Select source</string>
        <string name="please_wait">Please Wait…</string>
        <string name="populating_list">Fetching files. This may take a while</string>
        <string name="pref_header_about">About</string>
        <string name="print">Print Page</string>
        <string name="privacy_policy">Privacy Policy</string>
        <string name="progress_title">Processing..</string>
        <string name="re_enter_password">Re-enter Password</string>
        <string name="redo">Redo</string>
        <string name="refresh_app">Refresh App</string>
        <string name="reload_digest">Reload Digest</string>
        <string name="save_note">Save Note</string>
        <string name="save_page">Save Page</string>
        <string name="select_images_text">Select Images</string>
        <string name="selected_image">Selected Image</string>
        <string name="settings">Settings</string>
        <string name="share">Share</string>
        <string name="share_digest">Share Digest</string>
        <string name="share_link">Share Link</string>
        <string name="share_note">Share Note</string>
        <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
        <string name="sign_in">Sign in</string>
        <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
        <string name="summary_faq">View frequently asked questions</string>
        <string name="summary_support">Got any queries? We are happy to help!</string>
        <string name="test_quiz">TEST QUIZ</string>
        <string name="title_faq">FAQ</string>
        <string name="title_send_feedback">Send Feedback</string>
        <string name="title_terms">Terms &amp; Conditions</string>
        <string name="title_version">Version</string>
        <string name="toast_message">"1.   Enter Your Username For MyWorld.

\u0009\u00092.   Enter Your Valid E-mail Address.
        eg:   kixfobby@gmail.com

\u0009\u00093.   Then Set Your Password For
        Security Purposes.

\u0009\u0009Enjoy the app! ☺"</string>
        <string name="undo">Undo</string>
</resources>