<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="5"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
		app:actionViewClass="androidx.appcompat.widget.SearchView" />
	
	<item
        android:id="@+id/action_save"
		android:orderInCategory="10"
        android:title="@string/save_note"
		android:icon="@drawable/ic_save"
        app:showAsAction="always" />
	
	<item
        android:id="@+id/action_share"
		android:orderInCategory="15"
        android:title="@string/share_note"
		android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

 <item
        android:id="@+id/action_undo"
        android:orderInCategory="20"
        android:title="@string/undo"
        android:icon="@drawable/ic_undo"
        app:showAsAction="ifRoom"/>
	
    <item
        android:id="@+id/action_redo"
        android:orderInCategory="25"
        android:title="@string/redo"
        android:icon="@drawable/ic_redo"
        app:showAsAction="ifRoom"/>
	
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
	
	<item
        android:id="@+id/action_clear"
        android:orderInCategory="35"
        android:title="@string/action_clear"
        app:showAsAction="never"/>
	
	<item
        android:id="@+id/action_print"
        android:orderInCategory="40"
        android:title="@string/action_print"
        app:showAsAction="never"/>
	
</menu>


